Issue #2240009: Removed dpm().
Issue #2226781: Fixed error on type_map admin page for PHP5.4
Issue #2226781: Fixed warnings for PHP5.4 using reset().
Issue #2241577: Added machine_name to Workflow, influencing features.
Issue #2240009: Removed dpm().
Issue #2240009: Fixed 'chained' tokens now also workf when saving entities.
Issue #2226781: Fixed new states add added at end of state list.
Issue #0073412: Fixed a long-standing issue by adding a machine_name and label for Transitions! Many thanks to workflow_named_transitions.
Issue #0073412: Removed hardcoded text on action buttons, since they can be set with Transition labels, now.
Issue #2019345: Fixed constructor of WorkflowConfigTransition.
Issue #0744272: Added new hook to allow freely definable transitions per state.

Since 7.x-2.3
Issue #0744272: Fixed sort order of states in Workflow Form was not according to states weight.
Issue #2102409: Fixed some function (calls) did not support multiple field_names.
Issue #2250403: Fixed typo in workflow_access function, leaving Admin UI only accessible for user 1.
Issue #2256607 by chadhester: Added 'bundle' parameter to workflow_get_workflows_by_type().
Issue #2257145 by chadhester: Fixed Empty $wid value in _workflow_get_workflow_creation_sid().
Issue #2259893 by preddy: Fixed incorrectly hidden labels on Workflow Labels page.
Issue #2260183: Fixed errors with Tokens.
Issue #2261375: Fixed Workflow label was replaced by Workflow machine_name in version 2.3
Issue #2260183: Fixed errors with Tokens with entities that existed before Workflow was added to Entity type.
Issue #2265147: Fixed error in workflow_update_7011() during update.php.
Issue #2266077: Added help text on workflow_cleanup page.
Issue #2267115: Fixed No watchdog call when using Workflow Field.
Issue #2270581: Added examples of hook_workflow_(BASE_FORM_ID_)alter() to workflow.api.php.
Issue #2272121: Fixed 'Tokens' warning on page admin/reports/status.