@@ -15,7 +15,7 @@ class WorkflowConfigTransitionController extends EntityAPIController {
 
   /**
    * Overrides DrupalDefaultEntityController::cacheGet()
-   * 
+   *
    * Override default function, due to core issue #1572466.
    */
   protected function cacheGet($ids, $conditions = array()) {
@@ -27,9 +27,11 @@ class WorkflowConfigTransitionController extends EntityAPIController {
   }
 
   public function save($entity, DatabaseTransaction $transaction = NULL) {
+    $workflow = $entity->getWorkflow();
+
     // To avoid double posting, check if this transition already exist.
     if (empty($entity->tid)) {
-      if ($workflow = workflow_load_single($entity->wid)) {
+      if ($workflow) {
         $config_transitions = $workflow->getTransitionsBySidTargetSid($entity->sid, $entity->target_sid);
         $config_transition = reset($config_transitions);
         if ($config_transition) {
@@ -37,13 +39,24 @@ class WorkflowConfigTransitionController extends EntityAPIController {
         }
       }
     }
+
     // Create the machine_name. This can be used to rebuild/revert the Feature in a target system.
     if (empty($entity->name)) {
       $entity->name = $entity->sid . '_'. $entity->target_sid;
     }
-    $return = parent::save($entity, $transaction);
 
-    // Reset the cache for the affected workflow.
+    $return = parent::save($entity, $transaction);
+    if ($return) {
+      // Save in current workflow for the remainder of this page request.
+      // Keep in sync with Workflow::getTransitions() !
+      $workflow = $entity->getWorkflow();
+      if ($workflow) {
+        $workflow->transitions[$entity->tid] = $entity;
+        // $workflow->sortTransitions();
+      }
+    }
+
+    // Reset the cache for the affected workflow, to force reload upon next page_load.
     workflow_reset_cache($entity->wid);
 
     return $return;
@@ -116,9 +129,13 @@ class WorkflowConfigTransition extends Entity {
    */
   public function setWorkflow($workflow) {
     $this->wid = $workflow->wid;
+    $this->workflow = $workflow;
   }
 
   public function getWorkflow() {
+    if (isset($this->workflow)) {
+      return $this->workflow;
+    }
     return workflow_load_single($this->wid);
   }
 
