@@ -16,7 +16,7 @@ class WorkflowTransitionController extends EntityAPIController {
 
   /**
    * Overrides DrupalDefaultEntityController::cacheGet()
-   * 
+   *
    * Override default function, due to core issue #1572466.
    */
   protected function cacheGet($ids, $conditions = array()) {
